--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ h2{
 }
 p{
     color: dimgray;
+    font-size: 13px;
 }
 .orange-highlight{
         color: orange;
@@ -45,4 +46,29 @@ section{
     background-image: url(/images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 65%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url(/images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    padding:0;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, orange, red);
+    border-image-slice: 1;
+}
+#baby-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, rgb(215, 46, 245) );
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
