--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ section{
     padding-bottom: 150px;
 }
 .dream-area{
-    background-image: url(/images/dream-bg.png);
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -54,7 +54,7 @@ section{
     background-color: white;
 }
 .experience-area{
-    background-image: url(/images/exp-bg.png);
+    background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
     padding:0;
