--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p{
     width: 100%;
 }
 .top-banner{
-    background-image: url(/images/top-banner.png);
+    background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
 section{
